src/components/UI/cards/ProductCardTable/ProductCardTable.module.css
.card__prod {
  .notice {
    display: none;
  }
  .price__with__discount {
    display: none;
  }
  .price__discount__text {
    display: none;
  }
  .total__price__without__discount{
    display: none;
  }
}

.card__table {
  display: flex;
  justify-content: space-between;
  width: 100%;
  position: relative;
}

.card__left {
  display: flex;
  gap: 8px;
}

.card__right {
  width: max(20%, 230px);
  display: flex;
  justify-content: space-between;
}

.card__img {
  width: 80px;
  height: 60px;
  border-radius: 4px;
  box-shadow: var(--shadow-default-xs);
}

.card__img__checkbox {
  position: absolute;
  top: -4px;
  left: 8px;
}

.card__text {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px 0px;
}

.price__container {
  display: flex;
  gap: 8px;
}

.price__discount__text {
  color: var(--grayScale-color-light);
}

.price__without__discount__number {
  color: var(--grayScale-color-hardest);
}

.notice{
  height: fit-content;
}

.card__table__button {
  width: 100px;
  align-self: center;
}

.card__table__total__price {
  padding: 8px;
}

.total__price__without__discount{
  text-decoration: line-through;
}

